--- a/Calculadora/css/style.css
+++ b/Calculadora/css/style.css
@@ -30,6 +30,12 @@ p{
     margin-top: 20px;
     color: white;
 }
+h2#resultado{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: white;
+}
 input{
     padding: 10px;
     margin: 5px 0;
@@ -38,4 +44,5 @@ input{
     border: 1px solid white;
     width: 100%;
     box-sizing: border-box;
+    text-align: center;
 }
