--- a/CursoJS/Exercícios/ex014/modelo/estilo.css
+++ b/CursoJS/Exercícios/ex014/modelo/estilo.css
@@ -21,6 +21,19 @@ section {
     box-shadow: black 3px 3px 10px;
 }
 
+div#msg {
+    margin-top: 20px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+img {
+    padding: 20px;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+}
+
 footer {
     color: white;
     text-align: center;
