--- a/CursoJS/Exercícios/ex016/estilo.css
+++ b/CursoJS/Exercícios/ex016/estilo.css
@@ -31,6 +31,12 @@ input#botao {
     cursor: pointer;
 }
 
+div#res {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
 section {
     margin-bottom: 20px;
     text-align: center;
